--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
         </div>
 
     </section>
+    <!--SECTION-3-->
+    <section class="section-3">
+
+        <div class="area-title-2">
+            <h1> UMA COMUNIDADE SOBRE <br>RELACIONAMENTO</h1>
+            <h3>Ensinamos voce conquistar o seu amor</h3>
+            <a>QUERO FAZER PARTE</a>
+        </div>
+        <div class="image2">
+            <img src="src/img/banner 02.png">
+        </div>
+    </section>
 </body>
 
 </html>
