--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
             <img src="src/img/banner 02.png">
         </div>
     </section>
+
+    <!--AREA-FORMULARIO-->
+    <div class="area-form">
+        <h2>RECEBA NOSSO MATERIAL EXCLUSIVO GRATUITAMENTE EM SEU EMAIL</h2>
+        <div class="form">
+            <form>
+                <input type="text" name="nome" placeholder="seu nome">
+                <input type="email" name="email" placeholder="email">
+                <input type="submit" value="quero receber">
+            </form>
+
+
+        </div>
+
+    </div>
 </body>
 
 </html>
