--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
         </div>
 
     </div>
+    <footer>
+        <div class="social">
+            <h3> NOSSAS REDES SOCIAIS</h3>
+            <img src="src/img/icone01.png">
+            <img src="src/img/Vector (4).png">
+            <img src="src/img/icone03.png">
+         </div>
+    </footer>
 </body>
 
 </html>
